--- a/style.css
+++ b/style.css
@@ -3,37 +3,48 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-transition: all 300ms ease;
+  transition: all 300ms ease;
+}
+
+html {
+  --v1:#222;
+  --v2:#444;
+  --v3:#303030;
+  --v4:#555;
+  --v5: #fff;
 }
 
 body {
   width: 100vw;
   font-family: sans-serif;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
   overflow-y: hidden;
 }
 
-body .cards {
-  width: 320px;
-  min-height: 1px;
-  padding: 4px;
-  position: fixed;
-  top: 20%;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  pointer-events: none;
-  opacity: 0;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
+body .cards-wrapper {
+  width: 332px;
+  position: relative;
+  height: 200px;
 }
 
-body .cards.active {
+body .cards-wrapper .cards {
+  width: 320px;
+  min-height: 1px;
+  height: 100%;
+  padding: 4px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0;
+}
+
+body .cards-wrapper .cards.active {
   opacity: 1;
   pointer-events: initial;
 }
 
-body .cards .card-header {
+body .cards-wrapper .cards .card-header {
   border: 1px solid  transparent;
   border-bottom: none;
   border-top-left-radius: 4px;
@@ -49,23 +60,21 @@ body .cards .card-header {
           align-items: center;
 }
 
-body .cards .card-header p {
+body .cards-wrapper .cards .card-header p {
   padding: 10px;
 }
 
-body .cards .card-header close {
+body .cards-wrapper .cards .card-header close {
   cursor: pointer;
   opacity: 0.65;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
   padding: 10px;
 }
 
-body .cards .card-header close:hover {
+body .cards-wrapper .cards .card-header close:hover {
   opacity: 1;
 }
 
-body .cards .card-body {
+body .cards-wrapper .cards .card-body {
   padding: 10px;
   border: 1px solid  transparent;
   border-top: none;
@@ -91,13 +100,27 @@ body .alerts p {
 }
 
 body.light {
-  background-color: #B8E1FF;
-  color: #000501;
+  color: #222;
+  background-color: #fff;
+}
+
+body.light .alerts {
+  background-color: #00bc8c;
+}
+
+body.light .cards .card-header {
+  color: #444;
+  border-color: #444;
+}
+
+body.light .cards .card-body {
+  color: #303030;
+  border-color: #444;
 }
 
 body.dark {
-  background-color: #222;
-  color: #fff;
+  background-color: var(--v1);
+  color: var(--v5);
 }
 
 body.dark .alerts {
@@ -105,13 +128,13 @@ body.dark .alerts {
 }
 
 body.dark .cards .card-header {
-  background-color: #444;
-  border-color: #fff;
+  background-color: var(--v2);
+  border-color: var(--v5);
 }
 
 body.dark .cards .card-body {
-  background-color: #303030;
-  border-color: #fff;
+  background-color: var(--v3);
+  border-color: var(--v5);
 }
 
 bold {
@@ -135,14 +158,14 @@ bold {
       -ms-flex-align: center;
           align-items: center;
   margin: 0 auto;
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
 }
 
 .in-screen .toggle-mode {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: absolute;
+  top: 25px;
 }
 
 .in-screen .toggle-mode div:nth-child(1) label {
@@ -188,18 +211,12 @@ bold {
 }
 
 .in-screen section#tag-along .tables-button button {
-  -webkit-transition: all 300ms ease;
-  transition: all 300ms ease;
   border: 1px solid transparent;
 }
 
-.in-screen.light .toggle-mode div label {
-  border-color: #247BA0;
-  background-color: transparent;
-}
-
 .in-screen.light .toggle-mode div input:checked + label {
-  background-color: aliceblue;
+  color: #303030;
+  background-color: #fff;
 }
 
 .in-screen.light h1 {
@@ -207,8 +224,8 @@ bold {
 }
 
 .in-screen.light section {
-  background-color: #97DFFC;
-  border-color: #247BA0;
+  background-color: #fff;
+  border-color: #555;
   -webkit-box-shadow: 3px -1px 3px -2px #5158BB;
   box-shadow: 3px -1px 3px -2px #5158BB;
 }
@@ -230,17 +247,17 @@ bold {
 }
 
 .in-screen.dark .toggle-mode div label {
-  border-color: #555;
-  color: #555;
+  border-color: var(--v4);
+  color: var(--v4);
 }
 
 .in-screen.dark .toggle-mode div input:checked + label {
-  background-color: #303030;
-  color: #fff;
+  background-color: var(--v3);
+  color: var(--v5);
 }
 
 .in-screen.dark section {
-  background-color: #303030;
+  background-color: var(--v3);
 }
 
 .in-screen.dark section#tag-along .tables-button button {
@@ -248,7 +265,7 @@ bold {
 }
 
 .in-screen.dark section#tag-along .tables-button button:hover {
-  color: #fff;
+  color: var(--v5);
 }
 
 section#result {
@@ -299,8 +316,10 @@ section#tag-along .tables table thead {
 }
 
 section#tag-along .tables table tbody {
+  display: inline-block;
   position: relative;
   height: 23px;
+  min-height: 23px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transition: -webkit-transform 0.5s;
