--- a/style.scss
+++ b/style.scss
@@ -2,52 +2,71 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
+    transition: all 300ms ease;
+}
+html{
+    --v1:#222;
+    --v2:#444;
+    --v3:#303030;
+    --v4:#555;
+    --v5: #fff;
 }
 body{
     width:100vw;
     font-family:sans-serif;
-    transition:all 300ms ease;
+    //transition:all 300ms ease;
     overflow-y: hidden;
-    .cards{
-        width:320px;
-        min-height:1px;
-        padding:4px;
-        position:fixed;
-        top:20%;
-        left:50%;
-        transform:translateX(-50%);
-        pointer-events:none;
-        opacity:0;
-        transition:all 300ms ease;
-        &.active{
-            opacity:1;
-            pointer-events:initial;
-        }
-        .card-header{
-            border: 1px solid  transparent;
-            border-bottom:none;
-            border-top-left-radius:4px;
-            border-top-right-radius:4px;
-            display: flex;
-            justify-content:space-between;
-            align-items: center;
-            p{
-                padding:10px;
+    .cards-wrapper{
+        width:332px;
+        position:relative;
+        height:200px;
+        // overflow-y:scroll;
+        .cards{
+            width:320px;
+            min-height:1px;
+            height:100%;
+            padding:4px;
+            position:absolute;
+            top:0;
+            left:0;
+            // overflow:scroll;
+            // position:fixed;
+            // top:20%;
+            // left:50%;
+            // transform:translateX(-50%);
+            pointer-events:none;
+            opacity:0;
+            //transition:all 300ms ease;
+            &.active{
+                opacity:1;
+                pointer-events:initial;
             }
-            close{
-                cursor:pointer;
-                opacity:0.65;
-                transition:all 300ms ease;
-                padding:10px;
-                &:hover{
-                    opacity:1;
+            .card-header{
+                border: 1px solid  transparent;
+                border-bottom:none;
+                border-top-left-radius:4px;
+                border-top-right-radius:4px;
+                display: flex;
+                justify-content:space-between;
+                align-items: center;
+                p{
+                    padding:10px;
+                }
+                close{
+                    cursor:pointer;
+                    opacity:0.65;
+                    //transition:all 300ms ease;
+                    padding:10px;
+                    &:hover{
+                        opacity:1;
+                    }
                 }
             }
-        }
-        .card-body{
-            padding:10px;
-            border: 1px solid  transparent;
-            border-top:none;
+            .card-body{
+                padding:10px;
+                border: 1px solid  transparent;
+                border-top:none;
+            }
         }
     }
     .alerts{
@@ -62,23 +81,38 @@ body{
         }
     }
     &.light{    
-        background-color:#B8E1FF;
-        color:#000501;
-    }
-    &.dark{
-        background-color:#222;
-        color:#fff;
+        // background-color:#B8E1FF;
+        // color:#000501;
+        color:#222;
+        background-color:#fff;
         .alerts{
             background-color:#00bc8c;
         }
         .cards{
             .card-header{
-                background-color:#444;
-                border-color:#fff;
+                color:#444;
+                border-color:#444;
             }
             .card-body{
-                background-color:#303030;
-                border-color:#fff;
+                color:#303030;
+                border-color:#444;
+            } 
+        }
+    }
+    &.dark{
+        background-color:var(--v1);
+        color:var(--v5);
+        .alerts{
+            background-color:#00bc8c;
+        }
+        .cards{
+            .card-header{
+                background-color:var(--v2);
+                border-color:var(--v5);
+            }
+            .card-body{
+                background-color:var(--v3);
+                border-color:var(--v5);
             } 
         }
     }
@@ -94,9 +128,11 @@ bold{
     justify-content: center;
     align-items:center;
     margin:0 auto;
-    transition:all 300ms ease;
+    //transition:all 300ms ease;
     .toggle-mode{
         display:flex;
+        position:absolute;
+        top:25px;
         div{
             &:nth-child(1){
                 label{
@@ -143,7 +179,7 @@ bold{
         }
         .tables-button{
             button{
-                transition:all 300ms ease;
+                //transition:all 300ms ease;
                 border:1px solid transparent;
             }
         }
@@ -152,12 +188,14 @@ bold{
         .toggle-mode{
             div{
                 label{
-                    border-color:#247BA0;
-                    background-color:transparent;
+                    // border-color:#247BA0;
+                    // background-color:transparent;
                  }
                  input{
                      &:checked + label {
-                         background-color:aliceblue;
+                        //  background-color:aliceblue;
+                        color:#303030;
+                        background-color:#fff;
                      }      
                  }
             }
@@ -167,8 +205,10 @@ bold{
             color:black;
         }
         section{
-            background-color:#97DFFC;
-            border-color:#247BA0;
+            // background-color:#97DFFC;
+            background-color:#fff;
+            border-color:#555;
+            // border-color:#247BA0;
             -webkit-box-shadow: 3px -1px 3px -2px #5158BB;
             -moz-box-shadow: 3px -1px 3px -2px #5158BB;
             box-shadow:3px -1px 3px -2px #5158BB;
@@ -197,26 +237,26 @@ bold{
         .toggle-mode{
             div{
                 label{
-                    border-color:#555;
-                    color:#555;
+                    border-color:var(--v4);
+                    color:var(--v4);
                 }
                 input{
                     &:checked + label{
-                        background-color:#303030;
-                        color:#fff;
+                        background-color:var(--v3);
+                        color:var(--v5);
                     }
                 }
             }
         }
         section{
-            background-color:#303030;
+            background-color:var(--v3);
         }
         section#tag-along{
             .tables-button{
                 button{
                     border-color:white;
                     &:hover{
-                        color:#fff;
+                        color:var(--v5);
                     }
                 }
             }
@@ -253,8 +293,10 @@ section#tag-along{
                 border-bottom:1px solid transparent;
             }
             tbody{
+                display:inline-block;
                 position:relative;
                 height: 23px;
+                min-height:23px;
                 transform-style:preserve-3d;
                 transition:transform 0.5s;
                 tr{
